ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low

  * Call dpkg using the full path (LP: #1085844)

 -- Brian Murray <brian@ubuntu.com>  Thu, 13 Dec 2012 08:39:56 -0800

ubuntu-release-upgrader (1:0.192.1) raring; urgency=low

  * Resolve an encoding issue when a user responds with non-ascii test in the
    text view (LP: #1071388)

 -- Brian Murray <brian@ubuntu.com>  Tue, 11 Dec 2012 16:49:29 -0800

ubuntu-release-upgrader (1:0.192) raring; urgency=low

  * do-release-upgrade:
    - Fix crasher when not using gtk (LP: #1076186)

 -- Michael Terry <mterry@ubuntu.com>  Tue, 13 Nov 2012 10:18:47 -0500

ubuntu-release-upgrader (1:0.191.2) raring; urgency=low

  * tests/test_view.py: Use "tee" as pager instead of "less", so that this
    test also works in an environment without stdout.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 09 Nov 2012 13:51:34 +0100

ubuntu-release-upgrader (1:0.191.1) raring-proposed; urgency=low

  [ Michael Vogt ]
  * update all string for quantal->raring upgrade

  [ Brian Murray ]
  * rewrite sources if using a local mirror without backports (LP: #1067393) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Nov 2012 09:44:11 +0100

ubuntu-release-upgrader (1:0.191) raring; urgency=low

  * support quantal->raring release upgrades

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 30 Oct 2012 09:33:50 +0100

ubuntu-release-upgrader (1:0.190.3) quantal-proposed; urgency=low

  * DistUpgrade.ui: allow the conf file dialog to be resizable and set it to a
    larger initial size.  Thanks to Michael Terry for the fix. (LP: #1065806)
  * DistUpgradeApport.py: check to see if --tags is available before trying to
    use it (LP: #1070043)

 -- Brian Murray <brian@ubuntu.com>  Tue, 23 Oct 2012 10:45:58 -0700

ubuntu-release-upgrader (1:0.190.2) quantal-proposed; urgency=low

  * fix unicode releated crash in non-english locales (LP: #1068389)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Oct 2012 09:30:36 +0200
