@@ -1,6 +1,10 @@
 ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low
 
+  [ Brian Murray ]
   * Call dpkg using the full path (LP: #1085844)
+
+  [ Colin Watson ]
+  * Remove calls to (currently) Python 2-only dh_auto_* (LP: #1089861).
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 13 Dec 2012 08:39:56 -0800
 
